--- a/src/Css/TodoStyles.css
+++ b/src/Css/TodoStyles.css
@@ -21,6 +21,13 @@ justify-content: center;
 .todo-header input {
     width: 800px;
 }
+
+@media only screen and (max-width: 768px) {
+    .todo-header input {
+         width: auto;
+   }
+}
+
 .todo-header-input {
     height: 40px;
     border-radius: 20px 0 20px 0;
@@ -89,6 +96,17 @@ transition-duration: 0.5s;
     color: white;
 }
 
+@media only screen and (max-width: 768px) {
+.todo-active {
+      width: 50%;
+    }
+
+.todo-active button {
+      width: 100px;
+    font-size: 15px;
+    }
+}
+
 .todo-active button:hover {
     border-radius: 0 20px 0 20px;
     background-color: olive;
@@ -141,6 +159,17 @@ border-radius: 20px 0 0 0 ;
         font-size: 24px;
         color: cyan;
         border-radius: 20px 0 20px 0;
+}
+
+@media only screen and (max-width : 768px) {
+    .todo-items-ul-li button {
+        width: 100px;
+        font-size: 15px;
+    }
+    .todo-items-ul-li {
+        font-size: 15px;
+        height: 20px;
+    }
 }
 
 .todo-items-ul-li button:hover  {
